--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6">
-						<h1 class="title">Andover Clean Energy Hackathon</h1>
+						<h1 class="title">ACE (Andover Clean Energy) Hackathon</h1>
 						<h4>Every landing page needs a small description after the big bold title, that's why we added this text here. Add here all the information that can make you or your product create the first impression.</h4>
 						<br />
 						<a href="" class="btn btn-success btn-raised btn-lg">
