--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6">
-						<h1 class="title">ACE (Andover Clean Energy) Hackathon</h1>
+						<h1 class="title">ACE Hackathon</h1>
 						<h4>Every landing page needs a small description after the big bold title, that's why we added this text here. Add here all the information that can make you or your product create the first impression.</h4>
 						<br />
 						<a href="" class="btn btn-success btn-raised btn-lg">
@@ -77,7 +77,7 @@
 				<div class="section text-center" id="about">
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2">
-							<h2 class="title">About</h2>
+							<h2 class="title">Mission</h2>
 							<h5 class="description">An ever increasing number of technologies have seeped into our daily routines, from wearables like the Apple Watch to Internet of Things devices like Amazon’s Alexa. With the ubiquity of these technologies, how can we ensure that the demand of electricity does not become wasteful? Students participating in the Andover Clean Energy (ACE) Hackathon will be asked to identify creative ways of reducing instances of careless energy waste from the PA campus. More tech-savvy participants can then implement their ideas in the form of a hardware prototype or software app.</h5>
 						</div>
 					</div>
