--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				<ul class="nav navbar-nav navbar-right">
 					<li>
 						<a href="#about">
-							<i class="material-icons">info</i> About
+							<i class="material-icons">info</i> Mission
 						</a>
 					</li>
 					<li>
