--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				<div class="row">
 					<div class="col-md-6">
 						<h1 class="title">ACE Hackathon</h1>
-						<h4>Every landing page needs a small description after the big bold title, that's why we added this text here. Add here all the information that can make you or your product create the first impression.</h4>
+						<h4>Support our planet by contributing creative solutions to complex problems. Joins us on April 14th to join the effort!</h4>
 						<br />
 						<a href="" class="btn btn-success btn-raised btn-lg">
 							<i class="fa fa-thumbs-o-up"></i> Sign Up
