table and about

--- a/index.html
+++ b/index.html
@@ -37,12 +37,22 @@
 				<ul class="nav navbar-nav navbar-right">
 					<li>
 						<a href="#about">
-							<i class="material-icons">info</i> Mission
+							<i class="material-icons">info</i> About
+						</a>
+					</li>
+					<li>
+						<a href="#mission">
+							<i class="material-icons">flight</i> Mission
 						</a>
 					</li>
 					<li>
 						<a href="#how-to">
 							<i class="material-icons">lightbulb_outline</i> How To?
+						</a>
+					</li>
+					<li>
+						<a href="#how-to">
+							<i class="material-icons">list</i> Schedule
 						</a>
 					</li>
 					<li>
@@ -62,7 +72,7 @@
 				<div class="row">
 					<div class="col-md-6">
 						<h1 class="title">ACE Hackathon</h1>
-						<h4>Join us on April 14th to contribute creative solutions to complex energy problems!</h4>
+						<h4>Every landing page needs a small description after the big bold title, that's why we added this text here. Add here all the information that can make you or your product create the first impression.</h4>
 						<br />
 						<a href="" class="btn btn-success btn-raised btn-lg">
 							<i class="fa fa-thumbs-o-up"></i> Sign Up
@@ -75,6 +85,15 @@
 		<div class="main main-raised">
 			<div class="container">
 				<div class="section text-center" id="about">
+					<div class="row">
+						<div class="col-md-8 col-md-offset-2">
+							<h2 class="title">What is Ace Hackathon?</h2>
+							<h5 class="description">Blah.</h5>
+						</div>
+					</div>
+				</div>
+
+				<div class="section text-center" id="mission">
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2">
 							<h2 class="title">Mission</h2>
@@ -116,6 +135,121 @@
 									<p>A panel of distinguished guests from Andover and beyond (including MIT) will judge each entry and select a winner! Prizes TBA.</p>
 								</div>
 							</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="section text-center" id="schedule">
+					<div class="row">
+						<div class="col-md-8 col-md-offset-2">
+							<h2 class="title">Schedule</h2>
+							<h3>Friday</h3>
+								<div class="table-responsive ">
+			                        <table class="table table-striped">
+			                            <thead>
+			                                <tr>
+
+			                                    <th class="text-center">Time</th>
+			                                    <th class="text-center">Event</th>
+			                                    <th class="text-center">Location</th>
+
+			                                </tr>
+			                            </thead>
+			                            <tbody>
+			                                <tr>
+
+			                                    <td>Andrew Mike</td>
+			                                    <td>Develop</td>
+			                                    <td>2013</td>
+
+			                                </tr>
+			                                <tr>
+
+
+			                                    <td>John Doe</td>
+			                                    <td>Design</td>
+			                                    <td>2012</td>
+
+			                                </tr>
+			                                <tr>
+
+			                                    <td>Alex Mike</td>
+			                                    <td>Design</td>
+			                                    <td>2010</td>
+
+			                                </tr>
+			                                <tr>
+
+			                                    <td>Mike Monday</td>
+			                                    <td>Marketing</td>
+			                                    <td>2013</td>
+
+			                                </tr>
+			                                <tr>
+
+			                                    <td>Paul Dickens</td>
+			                                    <td>Communication</td>
+			                                    <td>2015</td>
+
+
+			                                </tr>
+			                            </tbody>
+			                        </table>
+			                        </div>
+															<h3>Saturday</h3>
+																<div class="table-responsive">
+											                        <table class="table table-striped">
+											                            <thead>
+											                                <tr>
+
+											                                    <th class="text-center">Time</th>
+											                                    <th class="text-center">Event</th>
+											                                    <th class="text-center">Location</th>
+
+											                                </tr>
+											                            </thead>
+											                            <tbody>
+											                                <tr>
+
+											                                    <td>Andrew Mike</td>
+											                                    <td>Develop</td>
+											                                    <td>2013</td>
+
+											                                </tr>
+											                                <tr>
+
+
+											                                    <td>John Doe</td>
+											                                    <td>Design</td>
+											                                    <td>2012</td>
+
+											                                </tr>
+											                                <tr>
+
+											                                    <td>Alex Mike</td>
+											                                    <td>Design</td>
+											                                    <td>2010</td>
+
+											                                </tr>
+											                                <tr>
+
+											                                    <td>Mike Monday</td>
+											                                    <td>Marketing</td>
+											                                    <td>2013</td>
+
+											                                </tr>
+											                                <tr>
+
+											                                    <td>Paul Dickens</td>
+											                                    <td>Communication</td>
+											                                    <td>2015</td>
+
+
+											                                </tr>
+											                            </tbody>
+											                        </table>
+											                        </div>
+
 						</div>
 					</div>
 				</div>
