--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6">
-					<h1 class="title tlt1" data-in-effect="rollIn">ACE Hackathon</h1>
+					<h1 class="title tlt1" data-in-effect="bounceInDown">ACE Hackathon</h1>
 					<h4>Every landing page needs a small description after the big bold title, that's why we added this text here. Add here all the information that can make you or your product create the first impression.</h4>
 					<br />
 					<a href="" class="btn btn-success btn-raised btn-lg">
@@ -80,11 +80,11 @@
 					</a>
 				</div>
 				<div class="col-md-6 text-center">
-					<h1 class="tlt2">
+					<h1 class="tlt2 title" style="background: rgba(76, 175, 80, 0.7); padding: 30px; text-transform: uppercase">
 						<ul class="texts">
-							<li data-in-effect="bounceInRight" data-out-effect="bounceOutRight">Some Title</li>
-							<li data-in-effect="bounceInRight">Another Title</li>
-							<li data-in-effect="bounceInRight">Third Title</li>
+							<li data-in-effect="bounceInRight" data-out-effect="bounceOutRight" data-out-sync="true">Reduce Waste</li>
+							<li data-in-effect="bounceInRight" data-out-effect="bounceOutRight" data-out-sync="true">Be Energy Efficient</li>
+							<li data-in-effect="bounceInRight">Go Green</li>
 						</ul>
 					</h1>
 				</div>
