--- a/index.html
+++ b/index.html
@@ -97,10 +97,9 @@
 			<div class="section text-center" id="about">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2">
-						<h2 class="title">What is Ace Hackathon?</h2>
-						<h5 class="description">The ACE (Andover Clean Energy) Hackathon is a hackathon where students will focus on contributing creative solutions to reduce energy waste on the PA campus. A series of inspirational speakers will jumpstart the event by offering examples of how they have contributed to the sustainability effort. We will also host a series of PA faculty and staff in order to provide specific areas where PA could improve. 
-
-Students will need to develop proofs of their concepts using, for example, 3D printed and laser cut designs. More advanced participants will also have the option of submitting hardware prototypes or software applications.</h5>
+						<h2 class="title">What is the ACE Hackathon?</h2>
+						<h5 class="description">The ACE (Andover Clean Energy) Hackathon is a hackathon where students will focus on contributing creative solutions to reduce energy waste on the PA campus. A series of inspirational speakers will jumpstart the event by offering examples of how they have contributed to the sustainability effort. We will also host a series of PA faculty and staff in order to provide specific areas where PA could improve. </h5>
+						<h5 class="description">Students will need to develop proofs of their concepts using, for example, 3D printed and laser cut designs. More advanced participants will also have the option of submitting hardware prototypes or software applications.</h5>
 					</div>
 				</div>
 			</div>
