--- a/index.html
+++ b/index.html
@@ -162,47 +162,28 @@
 
 										<th class="text-center">Time</th>
 										<th class="text-center">Event</th>
-										<th class="text-center">Location</th>
-
 									</tr>
 								</thead>
 								<tbody>
 									<tr>
-
-										<td>Andrew Mike</td>
-										<td>Develop</td>
-										<td>2013</td>
-
+									    <td>7:00-7:30 PM</td>
+									    <td>Registration in the Makersapce</td>
 									</tr>
 									<tr>
-
-
-										<td>John Doe</td>
-										<td>Design</td>
-										<td>2012</td>
-
+									    <td>7:30-8:00 PM</td>
+									    <td>Kick off and judge introductions</td>
 									</tr>
 									<tr>
-
-										<td>Alex Mike</td>
-										<td>Design</td>
-										<td>2010</td>
-
+									    <td>8:00 PM</td>
+									    <td>Let the Hacking Begin!</td>
 									</tr>
 									<tr>
-
-										<td>Mike Monday</td>
-										<td>Marketing</td>
-										<td>2013</td>
-
+									    <td>9:00-9:30 PM</td>
+									    <td>Workshop A</td>
 									</tr>
 									<tr>
-
-										<td>Paul Dickens</td>
-										<td>Communication</td>
-										<td>2015</td>
-
-
+									    <td>11:00 PM</td>
+									    <td>Students head back to their dorms</td>
 									</tr>
 								</tbody>
 							</table>
@@ -220,42 +201,33 @@
 									</tr>
 								</thead>
 								<tbody>
-									<tr>
-
-										<td>Andrew Mike</td>
-										<td>Develop</td>
-										<td>2013</td>
-
+						                        <tr>
+									    <td>9:00 AM</td>
+									    <td>Breakfast in the Makerspace</td>
 									</tr>
 									<tr>
-
-
-										<td>John Doe</td>
-										<td>Design</td>
-										<td>2012</td>
-
+									    <td width="40%" >9:45-10:30 AM</td>
+									    <td width="60%">Workshop B</td>
 									</tr>
 									<tr>
-
-										<td>Alex Mike</td>
-										<td>Design</td>
-										<td>2010</td>
-
+									    <td>12:00-1:00 PM</td>
+									    <td>Lunch</td>
 									</tr>
 									<tr>
-
-										<td>Mike Monday</td>
-										<td>Marketing</td>
-										<td>2013</td>
-
+									    <td>1:00-1:30 PM</td>
+									    <td>Workshop C</td>
 									</tr>
 									<tr>
-
-										<td>Paul Dickens</td>
-										<td>Communication</td>
-										<td>2015</td>
-
-
+									    <td>6:00 PM</td>
+									    <td>Deadline for submissions</td>
+									</tr>
+									<tr>
+									    <td>6:30 PM</td>
+									    <td>Judges convene and select winners. Dinner is available.</td>
+									</tr>
+									<tr>
+									    <td>7:00 PM</td>
+									    <td>Winners recieve their prizes and talk a bit about their projects!</td>
 									</tr>
 								</tbody>
 							</table>
@@ -281,7 +253,7 @@
 								</div>
 								<div class="col-md-7">
 									<div class="content">
-										<h4 class="card-title">Gerardo Morona</h4>
+										<h4 class="card-title">Gherardo Morona</h4>
 										<h6 class="category text-muted">Co-Organizer</h6>
 
 										<p class="card-description">
