--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6">
-					<h1 class="title tlt1" data-in-effect="bounceInDown">ACE Hackathon</h1>
+					<h1 class="title tlt1" data-in-effect="bounceInDown">ACE Hackathon!!!</h1>
 					<h4>Join us on April 14th to contribute creative solutions to complex problems on energy conservation.</h4>
 					<br />
 					<a href="" class="btn btn-success btn-raised btn-lg">
@@ -83,7 +83,7 @@
 					<h1 class="tlt2 title" style="background: rgba(76, 175, 80, 0.7); padding: 30px; text-transform: uppercase">
 						<ul class="texts">
 							<li data-in-effect="bounceInRight" data-out-effect="bounceOutRight" data-out-sync="true">Reduce Waste</li>
-							<li data-in-effect="bounceInRight" data-out-effect="bounceOutRight" data-out-sync="true">Be Energy Efficient</li>
+							<li data-in-effect="bounceInRight" data-out-effect="bounceOutRight" data-out-sync="true">Energy Efficiency</li>
 							<li data-in-effect="bounceInRight">Go Green</li>
 						</ul>
 					</h1>
