--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6">
-					<h1 class="title tlt1" data-in-effect="bounceInDown">ACE Hackathonnn</h1>
+					<h1 class="title tlt1" data-in-effect="bounceInDown">ACE Hackathon</h1>
 					<h4>Join us on April 14th to contribute creative solutions to complex problems on energy conservation.</h4>
 					<br />
 					<a href="" class="btn btn-success btn-raised btn-lg">
