--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
 								</div>
 								<div class="col-md-7">
 									<div class="content">
-										<h4 class="card-title">Koob</h4>
+										<h4 class="card-title">John Koobatian</h4>
 										<h6 class="category text-muted">Co-Organize</h6>
 
 										<p class="card-description">
@@ -365,7 +365,7 @@
 								</div>
 								<div class="col-md-7">
 									<div class="content">
-										<h4 class="card-title">Lamikins</h4>
+										<h4 class="card-title">Darius Lam</h4>
 										<h6 class="category text-muted">Co-Organize</h6>
 
 										<p class="card-description">
