--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2">
 						<h2 class="title">What is the ACE Hackathon?</h2>
-						<h5 class="description">The ACE (Andover Clean Energy) Hackathon is a hackathon where students will focus on contributing creative solutions to reduce energy waste on the PA campus. A series of inspirational speakers will jumpstart the event by offering examples of how they have contributed to the sustainability effort. We will also host a series of PA faculty and staff in order to provide specific areas where PA could improve. </h5>
-						<h5 class="description">Students will need to develop proofs of their concepts using, for example, 3D printed and laser cut designs. More advanced participants will also have the option of submitting hardware prototypes or software applications.</h5>
+						<h5 class="description">The ACE (Andover Clean Energy) Hackathon in a 24-hour hackathon where students will focus on contributing creative solutions to reduce energy waste on the PA campus. A series of inspirational speakers will jumpstart the event by offering examples of how they have contributed innovative energy solutions in their respective carriers. Some of the speakers will come from PA and serve to point out to students where the campus needs a new solution to reduce energy waste.</h5>
+						<h5 class="description">Students will need to develop proofs of their concepts using, for example, 3D printed or laser cut designs. More advanced participants will also have the option of submitting hardware prototypes or software applications.</h5>
 					</div>
 				</div>
 			</div>
@@ -108,7 +108,7 @@
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2">
 						<h2 class="title">Mission</h2>
-						<h5 class="description">An ever increasing number of technologies have seeped into our daily routines, from wearables like the Apple Watch to Internet of Things devices like Amazon’s Alexa. With the ubiquity of these technologies, how can we ensure that the demand of electricity does not become wasteful? Students participating in the Andover Clean Energy (ACE) Hackathon will be asked to identify creative ways of reducing instances of careless energy waste from the PA campus. More tech-savvy participants can then implement their ideas in the form of a hardware prototype or software app.</h5>
+						<h5 class="description">Trends show increasing demand of energy world-wide, either because of larger populations and higher prosperity levels as well as because many new technologies, like the Apple Watch and Alexa, have become common use in our daily routines. As a result, this hackathon seeks to stimulate individuals to take control of their demand, finding creative ways to ensure it does not become wasteful.</h5>
 					</div>
 				</div>
 			</div>
