--- a/index.html
+++ b/index.html
@@ -75,9 +75,7 @@
 					<h1 class="title tlt1" data-in-effect="bounceInDown">ACE Hackathon</h1>
 					<h4>Join us on April 28-29 to contribute creative solutions to complex problems on energy conservation.</h4>
 					<br />
-					<a href="" class="btn btn-success btn-raised btn-lg">
-						<i class="fa fa-thumbs-o-up"></i> Sign Up
-					</a>
+					<a class="btn btn-success btn-raised btn-lg" href="https://kevinsun1.typeform.com/to/VdWBsU" data-mode="drawer_right" target="_blank"><i class="fa fa-thumbs-o-up"></i> Register Now!</a> <script> (function() { var qs, js, q, s, d = document, gi = d.getElementById, ce = d.createElement, gt = d.getElementsByTagName, id = "typef_orm_share", b = "https://s3-eu-west-1.amazonaws.com/share.typeform.com/"; if (!gi.call(d, id)) js = ce.call(d, "script"); js.id = id; js.src = b + "share.js"; q = gt.call(d, "script")[0]; q.parentNode.insertBefore(js, q) } })() </script>
 				</div>
 				<div class="col-md-6 text-center">
 					<img style="" src="assets/img/logo.png"/>
