--- a/index.html
+++ b/index.html
@@ -57,11 +57,18 @@
 							<i class="material-icons">list</i> Schedule
 						</a>
 					</li>
+
+										<li>
+											<a href="#sponsors">
+												<i class="material-icons">star</i> Sponsors
+											</a>
+										</li>
 					<li>
 						<a href="#team">
 							<i class="material-icons">face</i> Team
 						</a>
 					</li>
+
 
 				</ul>
 			</div>
@@ -234,6 +241,32 @@
 					</div>
 				</div>
 			</div>
+
+			<div class="section text-center" id="sponsors">
+				<div class="features">
+					<div class="row">
+						<h2 class="title">Sponsors</h2>
+						<div class="col-sm-6">
+
+	                       <a href="http://tanginstitute.andover.edu" target="_blank"> <img src="assets/img/tang.png" alt="Tang Institute" class="img-rounded img-responsive" style="padding: 30px"></a>
+	                    </div>
+
+											<div class="col-sm-6">
+												<h3 style="padding: 30px">The Science Department at Phillips Academy</h3>
+											</div>
+											</div>
+											<div class="row">
+											<div class="col-sm-6">
+												<h3 style="padding: 30px">The Library</h3>
+											</div>
+											<div class="col-sm-6">
+												<h3 style="padding: 30px">Phillips Academy Campus Sustainability</h3>
+											</div>
+										</div>
+				</div>
+			</div>
+
+
 
 		</div>
 
