--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 	                    </div>
 
 											<div class="col-sm-6">
-												<h3 style="padding: 30px">The Science Department at Phillips Academy</h3>
+												<a href="" target=""> <img src="assets/img/AndoverNaturalSciencesLogo.jpg" alt="Andover Natural Sciences" class="img-rounded img-responsive" style="padding: 30px"></a>
 											</div>
 											</div>
 											<div class="row">
