--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 					<a class="btn btn-success btn-raised btn-lg typeform-share button" href="https://kevinsun1.typeform.com/to/VdWBsU" data-mode="popup" target="_blank"><i class="fa fa-thumbs-o-up"></i> Register Now!</a> <script> (function() { var qs, js, q, s, d = document, gi = d.getElementById, ce = d.createElement, gt = d.getElementsByTagName, id = "typef_orm_share", b = "https://s3-eu-west-1.amazonaws.com/share.typeform.com/"; if (!gi.call(d, id)) { js = ce.call(d, "script"); js.id = id; js.src = b + "share.js"; q = gt.call(d, "script")[0]; q.parentNode.insertBefore(js, q) } })() </script>
 				</div>
 				<div class="col-md-6 text-center">
-					<img style="" src="assets/img/logo.png"/>
+					<img class="hackace-logo" src="assets/img/logo.png"/>
 				</div>
 			</div>
 		</div>
