--- a/index.html
+++ b/index.html
@@ -100,21 +100,21 @@
 					<li data-in-effect="bounceInRight">Go Green</li>
 				</ul>
 			</h1>
-			<div class="section text-center" id="about">
+			<div class="section" id="about">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2">
 						<h2 class="title">What is the ACE Hackathon?</h2>
-						<h5 class="description">The ACE (Andover Clean Energy) Hackathon in a 24-hour hackathon where students will focus on contributing creative solutions to reduce energy waste on the PA campus. A series of inspirational speakers will jumpstart the event by offering examples of how they have contributed innovative energy solutions in their respective carriers. Some of the speakers will come from PA and serve to point out to students where the campus needs a new solution to reduce energy waste.</h5>
-						<h5 class="description">Students will need to develop proofs of their concepts using, for example, 3D printed or laser cut designs. More advanced participants will also have the option of submitting hardware prototypes or software applications.</h5>
+						<h5 class="">The ACE (Andover Clean Energy) Hackathon in a 24-hour hackathon where students will focus on contributing creative solutions to reduce energy waste on the PA campus. A series of inspirational speakers will jumpstart the event by offering examples of how they have contributed innovative energy solutions in their respective carriers. Some of the speakers will come from PA and serve to point out to students where the campus needs a new solution to reduce energy waste.</h5>
+						<h5 class="">Students will need to develop proofs of their concepts using, for example, 3D printed or laser cut designs. More advanced participants will also have the option of submitting hardware prototypes or software applications.</h5>
 					</div>
 				</div>
 			</div>
 
-			<div class="section text-center" id="mission">
+			<div class="section" id="mission">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2">
 						<h2 class="title">Mission</h2>
-						<h5 class="description">Trends show increasing demand of energy world-wide, either because of larger populations and higher prosperity levels as well as because many new technologies, like the Apple Watch and Alexa, have become common use in our daily routines. As a result, this hackathon seeks to stimulate individuals to take control of their demand, finding creative ways to ensure it does not become wasteful.</h5>
+						<h5 class="">Trends show increasing demand of energy world-wide, either because of larger populations and higher prosperity levels as well as because many new technologies, like the Apple Watch and Alexa, have become common use in our daily routines. As a result, this hackathon seeks to stimulate individuals to take control of their demand, finding creative ways to ensure it does not become wasteful.</h5>
 					</div>
 				</div>
 			</div>
