--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2">
 						<h2 class="title">What is the ACE Hackathon?</h2>
-						<h5 class="">The ACE (Andover Clean Energy) Hackathon in a 24-hour hackathon where students will focus on contributing creative solutions to reduce energy waste on the PA campus. A series of inspirational speakers will jumpstart the event by offering examples of how they have contributed innovative energy solutions in their respective carriers. Some of the speakers will come from PA and serve to point out to students where the campus needs a new solution to reduce energy waste.</h5>
-						<h5 class="">Students will need to develop proofs of their concepts using, for example, 3D printed or laser cut designs. More advanced participants will also have the option of submitting hardware prototypes or software applications.</h5>
+						<h5 class="">The ACE (Andover Clean Energy) Hackathon will challenge students to work together and find creative solutions to reduce energy waste on campus. A series of inspirational speakers will jumpstart the event by sharing how they have advocated for sustainability in their respective carriers. Some of the speakers will be PA faculty and staff who will suggest certain directions that student projects could take in order to make the most impact on campus.</h5>
+						<h5 class="">Students will develop proof of their concepts using, for example, 3D printed or laser cut designs. More advanced participants will also have the option of submitting hardware prototypes or software applications.</h5>
 					</div>
 				</div>
 			</div>
