--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
 										<td>Let the Hacking Begin!</td>
 									</tr>
 									<tr>
-										<td>9:00-9:30 PM</td>
-										<td>Workshop A</td>
+										<td>8:30-9:00 PM</td>
+										<td>Workshop A - Ideation</td>
 									</tr>
 									<tr>
 										<td>11:00 PM</td>
@@ -212,7 +212,7 @@
 									</tr>
 									<tr>
 										<td width="40%" >9:45-10:30 AM</td>
-										<td width="60%">Workshop B</td>
+										<td width="60%">Workshop B - Tools of the Trade: Arduinos and more</td>
 									</tr>
 									<tr>
 										<td>12:00-1:00 PM</td>
@@ -220,7 +220,7 @@
 									</tr>
 									<tr>
 										<td>1:00-1:30 PM</td>
-										<td>Workshop C</td>
+										<td>Workshop C - Working with Data</td>
 									</tr>
 									<tr>
 										<td>6:00 PM</td>
@@ -274,7 +274,7 @@
 
 	<div class="container">
 		<div class="section text-center" id="team">
-			<h2 class="title">Here is our team</h2>
+			<h2 class="title">Questions? Contact Us!</h2>
 
 			<div class="team">
 				<div class="row">
@@ -293,13 +293,11 @@
 									<h6 class="category text-muted">co-organizer</h6>
 
 									<p class="card-description">
-										Hi everyone!
+										gmorona@andover.edu
 									</p>
 
 									<div class="footer">
-										<a href="" class="btn btn-just-icon btn-simple btn-twitter"><i class="fa fa-twitter"></i></a>
-										<a href="" class="btn btn-just-icon btn-simple btn-facebook"><i class="fa fa-facebook-square"></i></a>
-										<a href="" class="btn btn-just-icon btn-simple btn-google"><i class="fa fa-google"></i></a>
+
 									</div>
 								</div>
 							</div>
@@ -321,14 +319,11 @@
 									<h6 class="category text-muted">co-organizer</h6>
 
 									<p class="card-description">
-										Hi everyone!
+										ksun@andover.edu
 									</p>
 
 									<div class="footer">
-										<a href="" class="btn btn-just-icon btn-simple btn-linkedin"><i class="fa fa-linkedin"></i></a>
-										<a href="" class="btn btn-just-icon btn-simple btn-facebook"><i class="fa fa-facebook-square"></i></a>
-										<a href="" class="btn btn-just-icon btn-simple btn-dribbble"><i class="fa fa-dribbble"></i></a>
-										<a href="" class="btn btn-just-icon btn-simple btn-google"><i class="fa fa-google"></i></a>
+
 									</div>
 								</div>
 							</div>
@@ -350,13 +345,11 @@
 									<h6 class="category text-muted">co-organizer</h6>
 
 									<p class="card-description">
-										Hi everyone!
+										vdhar@andover.edu
 									</p>
 
 									<div class="footer">
-										<a href="" class="btn btn-just-icon btn-simple btn-youtube"><i class="fa fa-youtube-play"></i></a>
-										<a href="" class="btn btn-just-icon btn-simple btn-twitter"><i class="fa fa-twitter"></i></a>
-										<a href="" class="btn btn-just-icon btn-simple btn-instagram"><i class="fa fa-instagram"></i></a>
+
 									</div>
 								</div>
 							</div>
@@ -378,13 +371,11 @@
 									<h6 class="category text-muted">co-organizer</h6>
 
 									<p class="card-description">
-										Hi everyone!
+										jkoobatian@andover.edu
 									</p>
 
 									<div class="footer">
-										<a href="" class="btn btn-just-icon btn-simple btn-linkedin"><i class="fa fa-linkedin"></i></a>
-										<a href="" class="btn btn-just-icon btn-simple btn-facebook"><i class="fa fa-facebook-square"></i></a>
-										<a href="" class="btn btn-just-icon btn-simple btn-google"><i class="fa fa-google"></i></a>
+
 									</div>
 								</div>
 							</div>
@@ -406,13 +397,11 @@
 									<h6 class="category text-muted">co-organizer</h6>
 
 									<p class="card-description">
-										Hi everyone!
+										dlam@andover.edu
 									</p>
 
 									<div class="footer">
-										<a href="" class="btn btn-just-icon btn-simple btn-linkedin"><i class="fa fa-linkedin"></i></a>
-										<a href="" class="btn btn-just-icon btn-simple btn-facebook"><i class="fa fa-facebook-square"></i></a>
-										<a href="" class="btn btn-just-icon btn-simple btn-google"><i class="fa fa-google"></i></a>
+
 									</div>
 								</div>
 							</div>
@@ -427,42 +416,7 @@
 
 	<!--     *********    SIMPLE BLACK SOCIAL LINE     *********      -->
 
-	<div class="social-line social-line-big-icons social-line-black">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-2">
-					<a href="" class="btn btn-simple btn-just-icon btn-white">
-						<i class="fa fa-twitter"></i>
-					</a>
-				</div>
-				<div class="col-md-2">
-					<a href="" class="btn btn-simple btn-just-icon btn-white">
-						<i class="fa fa-facebook-square"></i>
-					</a>
-				</div>
-				<div class="col-md-2">
-					<a href="" class="btn btn-simple btn-just-icon btn-white">
-						<i class="fa fa-google-plus"></i>
-					</a>
-				</div>
-				<div class="col-md-2">
-					<a href="" class="btn btn-simple btn-just-icon btn-white">
-						<i class="fa fa-dribbble"></i>
-					</a>
-				</div>
-				<div class="col-md-2">
-					<a href="" class="btn btn-simple btn-just-icon btn-white">
-						<i class="fa fa-youtube-play"></i>
-					</a>
-				</div>
-				<div class="col-md-2">
-					<a href="" class="btn btn-simple btn-just-icon btn-white">
-						<i class="fa fa-instagram"></i>
-					</a>
-				</div>
-			</div>
-		</div>
-	</div>
+
 
 	<!--     *********   SIMPLE BLACK SOCIAL LINE     *********      -->
 	<!--     *********    BIG WHITE FOOTER V2     *********      -->
