--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 									</tr>
 									<tr>
 										<td>11:00 PM</td>
-										<td>Students head back to their dorms</td>
+										<td>Sleepover in the OWHL | Students head back to their dorms</td>
 									</tr>
 								</tbody>
 							</table>
