--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
 						</a>
 					</li>
 
-										<li>
-											<a href="#sponsors">
-												<i class="material-icons">star</i> Sponsors
-											</a>
-										</li>
+					<li>
+						<a href="#sponsors">
+							<i class="material-icons">star</i> Sponsors
+						</a>
+					</li>
 					<li>
 						<a href="#team">
 							<i class="material-icons">face</i> Team
@@ -248,21 +248,21 @@
 						<h2 class="title">Sponsors</h2>
 						<div class="col-sm-6">
 
-	                       <a href="http://tanginstitute.andover.edu" target="_blank"> <img src="assets/img/tang.png" alt="Tang Institute" class="img-rounded img-responsive" style="padding: 30px"></a>
-	                    </div>
+							<a href="http://tanginstitute.andover.edu" target="_blank"> <img src="assets/img/tang.png" alt="Tang Institute" class="img-rounded img-responsive" style="padding: 30px"></a>
+						</div>
 
-											<div class="col-sm-6">
-												<a href="" target=""> <img src="assets/img/AndoverNaturalSciencesLogo.jpg" alt="Andover Natural Sciences" class="img-rounded img-responsive" style="padding: 30px"></a>
-											</div>
-											</div>
-											<div class="row">
-											<div class="col-sm-6">
-												<h3 style="padding: 30px">The Library</h3>
-											</div>
-											<div class="col-sm-6">
-												<h3 style="padding: 30px">Phillips Academy Campus Sustainability</h3>
-											</div>
-										</div>
+						<div class="col-sm-6">
+							<a href="" target=""> <img src="assets/img/AndoverNaturalSciencesLogo.jpg" alt="Andover Natural Sciences" class="img-rounded img-responsive" style="padding: 30px; width: 400px"></a>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-sm-6">
+							<a href="" target=""> <img src="assets/img/library.jpg" alt="Library" class="img-rounded img-responsive" style="padding: 30px;"></a>
+						</div>
+						<div class="col-sm-6">
+							<a href="" target=""> <img src="assets/img/sustain.jpg" alt="Sustainability" class="img-rounded img-responsive" style="padding: 30px; height: 250px"></a>
+						</div>
+					</div>
 				</div>
 			</div>
 
