--- a/index.html
+++ b/index.html
@@ -152,6 +152,10 @@
 								<p>A panel of distinguished guests from Andover and beyond (including MIT) will judge each entry and select a winner! Prizes TBA.</p>
 							</div>
 						</div>
+						<div class="col-xs-12 text-center">
+								<h3 class="title">Helpful Data</h3>
+							<a class="btn btn-success btn-round" href="https://docs.google.com/spreadsheets/d/1MbfoSo5pgeRolEewkgQ4yPLdBHB9RcwTjjAIRZL4xV8/edit#gid=0" target="_blank">Commons Plate Data</a>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -172,20 +176,24 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td>7:00-7:30 PM</td>
+										<td>6:00-6:30 PM</td>
 										<td>Registration in the Makersapce</td>
 									</tr>
 									<tr>
-										<td>7:30-8:00 PM</td>
+										<td>6:30-7:00 PM</td>
 										<td>Kick off and judge introductions</td>
 									</tr>
 									<tr>
-										<td>8:00 PM</td>
+										<td>7:00 PM</td>
 										<td>Let the Hacking Begin!</td>
 									</tr>
 									<tr>
-										<td>8:30-9:00 PM</td>
+										<td>7:30-8:00 PM</td>
 										<td>Workshop A - Ideation</td>
+									</tr>
+									<tr>
+										<td>8:00-9:00 PM</td>
+										<td>Workshop B - <a href="http://energy.concord.org/energy3d/index.html" target="_blank">Energy3D Simulation Modeling with Dr. Charles Xie</a></td>
 									</tr>
 									<tr>
 										<td>11:00 PM</td>
@@ -212,15 +220,19 @@
 									</tr>
 									<tr>
 										<td width="40%" >9:45-10:30 AM</td>
-										<td width="60%">Workshop B - Tools of the Trade: Arduinos and more</td>
+										<td width="60%">Workshop B - Tools of the Trade with Gherardo Morona: Arduinos and <a href="https://particle.io" target="_blank">more</a></td>
 									</tr>
 									<tr>
 										<td>12:00-1:00 PM</td>
-										<td>Lunch</td>
+										<td>Lunch and Dr. Chong Liu Speaker, Inventor of the <a herf="http://news.harvard.edu/gazette/story/2016/06/bionic-leaf-turns-sunlight-into-liquid-fuel/" target="_blank">Bionic Leaf</a>/td>
 									</tr>
 									<tr>
 										<td>1:00-1:30 PM</td>
-										<td>Workshop C - Working with Data</td>
+										<td>Workshop C - Working with Data with Darius Lam</td>
+									</tr>
+									<tr>
+										<td>2:00-300 PM</td>
+										<td>Workshop D - Using Makerspace Tools with Koob</td>
 									</tr>
 									<tr>
 										<td>6:00 PM</td>
