--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 						</a>
 					</li>
 					<li>
-						<a href="#how-to">
+						<a href="#schedule">
 							<i class="material-icons">list</i> Schedule
 						</a>
 					</li>
@@ -155,6 +155,8 @@
 						<div class="col-xs-12 text-center">
 								<h3 class="title">Helpful Data</h3>
 							<a class="btn btn-success btn-round" href="https://docs.google.com/spreadsheets/d/1MbfoSo5pgeRolEewkgQ4yPLdBHB9RcwTjjAIRZL4xV8/edit#gid=0" target="_blank">Commons Plate Data</a>
+							<a class="btn btn-success btn-round" href="http://buildingdashboard.net/andover/" target="_blank">Green Cup Challenge Gunga Data</a>
+
 						</div>
 					</div>
 				</div>
@@ -224,7 +226,7 @@
 									</tr>
 									<tr>
 										<td>12:00-1:00 PM</td>
-										<td>Lunch and Dr. Chong Liu Speaker, Inventor of the <a herf="http://news.harvard.edu/gazette/story/2016/06/bionic-leaf-turns-sunlight-into-liquid-fuel/" target="_blank">Bionic Leaf</a>/td>
+										<td>Lunch and Dr. Chong Liu Speaker, Inventor of the <a herf="http://news.harvard.edu/gazette/story/2016/06/bionic-leaf-turns-sunlight-into-liquid-fuel/" target="_blank">Bionic Leaf</a></td>
 									</tr>
 									<tr>
 										<td>1:00-1:30 PM</td>
