--- a/index.html
+++ b/index.html
@@ -153,9 +153,15 @@
 							</div>
 						</div>
 						<div class="col-xs-12 text-center">
-								<h3 class="title">Helpful Data</h3>
+								<h3 >Helpful Data</h3>
 							<a class="btn btn-success btn-round" href="https://docs.google.com/spreadsheets/d/1MbfoSo5pgeRolEewkgQ4yPLdBHB9RcwTjjAIRZL4xV8/edit#gid=0" target="_blank">Commons Plate Data</a>
 							<a class="btn btn-success btn-round" href="http://buildingdashboard.net/andover/" target="_blank">Green Cup Challenge Gunga Data</a>
+
+						</div>
+						<div class="col-xs-12 text-center">
+								<h3 >Judges</h3>
+							<a class="btn btn-success btn-round" href="http://hackace.us/JudgingRubric.pdf" target="_blank">Judging Rubric</a>
+							<p>Ms. Allison Guerette, Mr. Brendan Mackinson, Mr. Colin Touhey, Mr. Anil Navkal, and Ms. Caroline Nolan</p>
 
 						</div>
 					</div>
